# embermud

./: .gitignore  CMakeLists.txt
area/: MudProgs.prg  help.are  todo.txt
docs/: api-reference.md  architecture.md  building.md  combat.md  commands.md  configuration.md  data-structures.md  database.md  game-systems.md  index.md  memory.md  mob-progs.md  networking.md  olc.md
embermud/: __init__.py  __main__.py  act_basic.py  area_loader.py  ban.py  color.py  comm.py  config.py  data.py  db.py  game.py  handler.py  interp.py  log.py  save.py  update.py  util.py
gosrc/: embermud  go.mod
gosrc/cmd/embermud/: main.go
gosrc/internal/commands/: commands.go
gosrc/internal/game/: act.go  ban.go  character.go  color.go  constants.go  exit.go  help.go  prompt.go  room.go  world.go
gosrc/internal/handler/: handler.go  search.go
gosrc/internal/network/: descriptor.go  nanny.go  server.go  telnet.go
gosrc/internal/persist/: area_loader.go  file_utils.go  player_save.go
gosrc/internal/update/: tick.go
src/: Makefile  act_basic.c  act_comm.c  act_info.c  act_obj.c  act_wiz.c  ban.c  bit.c  board.c  clan.c  class.c  comm.c  config.h  const.c  db.c  db.h  ember  ember.cfg  factions.c  fight.c  handler.c  helpolc.c  interp.c  interp.h  magic.c  mem.c  merc.h  mprog_commands.c  mud_progs.c  olc.c  olc_act.c  olc_save.c  random.c  recycle.h  save.c  skills.c  socialolc.c  ssm.c  string.c  todoolc.c  (+1 more)
src/MSVC/: embermud.sln  embermud.vcxproj  embermud.vcxproj.filters
